[gd_scene load_steps=4 format=3 uid="uid://com86osgfcl14"]

[ext_resource type="Script" path="res://assets/player/arm/player_arm.gd" id="1_xsrbk"]
[ext_resource type="Script" path="res://addons/smoothing/smoothing_2d.gd" id="2_fcv80"]
[ext_resource type="Texture2D" uid="uid://c1rs24tyye5qj" path="res://assets/craftpix-net-626011-free-guns-pack-2-for-main-characters-pixel-art/3 Hands/3 Cyborg/3.png" id="3_ggwoc"]

[node name="Arm" type="Node2D"]
script = ExtResource("1_xsrbk")
arm_lenght = 100.0

[node name="ArmBase" type="Marker2D" parent="."]

[node name="ArmEnd" type="Marker2D" parent="."]
position = Vector2(31.515, 0)

[node name="Smoothing2D" type="Node2D" parent="."]
script = ExtResource("2_fcv80")

[node name="ArmGraphics" type="Line2D" parent="Smoothing2D"]
unique_name_in_owner = true
z_index = -6
z_as_relative = false
points = PackedVector2Array(0, 0, 379.85, 0)
width = 20.0
texture = ExtResource("3_ggwoc")
texture_mode = 2
